# django-mom

./: .drone.yml  .gitignore  LICENSE  README.md  manage.py  requirements.txt  setup.cfg
.github/workflows/: python-test.yml
django_mom/: settings.py
django_mom/management/commands/: mom.py
test_app/: models.py  tests.py
test_app/migrations/: 0001_initial.py
test_core/: asgi.py  settings.py  urls.py  wsgi.py
test_data/feature_implicit_passing/: author.tasali.mom.yaml  mom.yaml  post.my-post.mom.yaml
test_data/nested/: lang.de.mom.yaml  mom.yaml
test_data/nested/lang/en/: mom.yaml
test_data/options/: file.myfile.mom.yaml  file.txt  mom.yaml
test_data/options/lang/en/: mom.yaml
test_data/options_update/: file.txt
test_data/ownership/: author.zach.mom.yaml  mom.yaml  post.awesome-work-machine.mom.yaml
test_data/ownership_update/: mom.yaml  post.awesome-work-machine.mom.yaml
test_data/populate_all/: author.auther.mom.yaml  change.future.mom.yaml  lang.tr.mom.yaml  mom.yaml  post.my-post.mom.yaml  post.my-second-post.mom.yaml
test_data/populate_all_update/: author.auther.mom.yaml  post.my-post.mom.yaml
test_data/populate_simple_update/: lang.en.mom.yaml
