[metadata]
name = django-mom
version = 0.0.5
author = Veli Tasalı
author_email = me@velitasali.com
description = Maps plain text data to a model, creating, updating, or removing it as it changes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/velitasali/django-mom
project_urls =
    Source = https://github.com/velitasali/django-mom/
    Tracker = https://github.com/velitasali/django-mom/issues/
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Topic :: Database :: Front-Ends

[options]
packages = find:
keywords = django serialization model object mapping
setup_requires =
    setuptools
install_requires =
    django>=3.2.3
    PyYAML>=5.4.1
python_requires = >=3.6